@@ -7,12 +7,12 @@ all: petname
 
 petname: petname.go cmd/petname/main.go
 	$(GO_BUILD)
-	GOPATH=$(shell pwd) $(GO_BUILD) -o petname cmd/petname/main.go
+	GOPATH=$(shell pwd) $(GO_BUILD) -o golang-petname cmd/petname/main.go
 
 test: petname.go petname_test.go
 	GOPATH=$(shell pwd) $(GO_TEST)
 
 clean:
-	$(RM) -f petname
+	$(RM) -f golang-petname
 
 .PHONY: all clean test
