@@ -2,7 +2,7 @@ Source: golang-petname
 Section: admin
 Priority: optional
 Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
-Build-Depends: debhelper (>= 8), golang-go,
+Build-Depends: debhelper (>= 8), golang-go, petname
 Standards-Version: 3.9.5
 Homepage: http://launchpad.net/petname
 Vcs-Browser: http://bazaar.launchpad.net/~petname/petname/trunk/files
