@@ -1,1 +1,1 @@
-petname /usr/lib/golang-petname/
+golang-petname /usr/bin/
