@@ -3,5 +3,9 @@
 %:
 	dh $@
 
+override_dh_auto_build:
+	./debian/update-wordlists.sh
+	dh_auto_build
+
 override_dh_strip:
 	true
